# knowledge-adapters

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  runs.example.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  workflow_or_process.md
.github/workflows/: check.yml  ci.yml  (+1 more)
docs/: adapter-contract-tests.md  adapter-readiness.md  adapter-spec.md  cak-15-public-pdf-footer-divergence-audit.md  chain-of-custody.md  chaos-testing.md  codex-workflow.md  confluence-incremental-sync.md  confluence-real-client.md  confluence-real-traversal.md  confluence-recursive-fetch.md  feature-delivery-workflow.md  github-metadata-longitudinal-repo-context.md  github-metadata-v1.md  google-docs-destination.md  project-map.md  public-operational-research-live-proof.md  public-pdf-dora-regression-fixtures.md  public-pdf-footer-page-number-noise.md  public-source-replay-acceptance.md  public-webpage-chrome-fixtures.md  release-workflow.md  source-package-conformance-matrix.md  source-package-contract.md  vision.md  youtube-source-package-adapter.md  youtube-source-package-implementation-plan.md
tests/: adapter_contracts.py  artifact_assertions.py  chaos.py  cli_helpers.py  cli_output_assertions.py  confluence_output_assertions.py  conftest.py  source_package_fixtures.py  test_adapter_readiness.py  test_bundle.py  test_chaos_ci_replay.py  test_chaos_fingerprints.py  test_cli.py  test_cli_bundle.py  test_cli_confluence.py  test_cli_help.py  test_cli_run.py  test_cli_smoke.py  test_confluence_incremental_contract.py  test_confluence_real_client_contract.py  test_confluence_real_traversal_contract.py  test_confluence_recursive_contract.py  test_git_repo.py  test_github_metadata.py  test_github_metadata_auth.py  test_gitignore.py  test_incremental_sync.py  test_local_files.py  test_manifest_stale.py  test_normalize_writer.py  test_packaging_metadata.py  test_public_pdf_dora_regression_fixtures.py  test_public_replay_acceptance.py  test_public_sources.py  test_public_webpage_chrome_fixtures.py  test_public_webpage_target_discovery.py  test_resolve.py  test_run_config.py  test_source_package.py  test_source_package_conformance_fixtures.py
(+103 files in other folders)
