[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-adapters"
version = "0.8.0"
description = "Generic adapters for acquiring and normalizing knowledge sources into local LLM-ready artifacts."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "Keith Minnig" }
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "fastapi>=0.115",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "uvicorn>=0.30",
]

[project.scripts]
knowledge-adapters = "knowledge_adapters.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: local integration tests that exercise real adapter wiring against deterministic stubs",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
